Quick fix for hackathon: • Fixed spoilers on compiled version • Made url static to be readable on other PCs (and with possible migration to `static.xobotun.com` in mind)

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -303,6 +303,15 @@ a:hover {
 	padding: 0.5em 0;
 }
 
+.spoiler__hidden {
+	visibility: hidden;
+	height: 0;
+}
+
+.spoiler__visible {
+	visibility: visible;
+}
+
 .spoiler-enter, .spoiler-leave-to {
 	max-height: 0;
 	padding: 0;
